// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> prop className should match snapshot when class name test is passed 1`] = `
<DocumentFragment>
  <div
    class="AccordionStyle__Container-sc-7hk6zs-1 dYPVKP aries-accordion test"
  >
    <div
      aria-expanded="false"
      class="AccordionStyle__PanelWrapper-sc-7hk6zs-0 khvCuq panel-wrapper test"
      role="tab"
      tabindex="0"
    >
      <div
        class="AccordionStyle__IconLabelWrapper-sc-7hk6zs-2 iINVGw label-wrapper"
        tabindex="-1"
      >
        <div
          class="AccordionStyle__IconWrapper-sc-7hk6zs-6 gJVdip"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 HVQub"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <path
              d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
            />
          </svg>
        </div>
        <div
          class="AccordionStyle__Label-sc-7hk6zs-5 cLFDCN"
        >
          label
        </div>
      </div>
      <div
        class="AccordionStyle__ContentWrapper-sc-7hk6zs-3 eGonwa content-wrapper"
      >
        <div
          class="AccordionStyle__Content-sc-7hk6zs-4 hqlwgo"
        >
          content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Accordion /> prop className should match snapshot when class name undefined is passed 1`] = `
<DocumentFragment>
  <div
    class="AccordionStyle__Container-sc-7hk6zs-1 dYPVKP aries-accordion"
  >
    <div
      aria-expanded="false"
      class="AccordionStyle__PanelWrapper-sc-7hk6zs-0 khvCuq panel-wrapper"
      role="tab"
      tabindex="0"
    >
      <div
        class="AccordionStyle__IconLabelWrapper-sc-7hk6zs-2 iINVGw label-wrapper"
        tabindex="-1"
      >
        <div
          class="AccordionStyle__IconWrapper-sc-7hk6zs-6 gJVdip"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 HVQub"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <path
              d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
            />
          </svg>
        </div>
        <div
          class="AccordionStyle__Label-sc-7hk6zs-5 cLFDCN"
        >
          label
        </div>
      </div>
      <div
        class="AccordionStyle__ContentWrapper-sc-7hk6zs-3 eGonwa content-wrapper"
      >
        <div
          class="AccordionStyle__Content-sc-7hk6zs-4 hqlwgo"
        >
          content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Accordion.Panel /> prop iconPosition should match snapshot when iconPosition left is passed 1`] = `
<DocumentFragment>
  <div
    class="AccordionStyle__Container-sc-7hk6zs-1 dYPVKP aries-accordion"
  >
    <div
      aria-expanded="false"
      class="AccordionStyle__PanelWrapper-sc-7hk6zs-0 khvCuq panel-wrapper"
      role="tab"
      tabindex="0"
    >
      <div
        class="AccordionStyle__IconLabelWrapper-sc-7hk6zs-2 iINVGw label-wrapper"
        tabindex="-1"
      >
        <div
          class="AccordionStyle__IconWrapper-sc-7hk6zs-6 gJVdip"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 HVQub"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <path
              d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
            />
          </svg>
        </div>
        <div
          class="AccordionStyle__Label-sc-7hk6zs-5 cLFDCN"
        >
          label
        </div>
      </div>
      <div
        class="AccordionStyle__ContentWrapper-sc-7hk6zs-3 eGonwa content-wrapper"
      >
        <div
          class="AccordionStyle__Content-sc-7hk6zs-4 hqlwgo"
        >
          content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Accordion.Panel /> prop iconPosition should match snapshot when iconPosition right is passed 1`] = `
<DocumentFragment>
  <div
    class="AccordionStyle__Container-sc-7hk6zs-1 dYPVKP aries-accordion"
  >
    <div
      aria-expanded="false"
      class="AccordionStyle__PanelWrapper-sc-7hk6zs-0 khvCuq panel-wrapper"
      role="tab"
      tabindex="0"
    >
      <div
        class="AccordionStyle__IconLabelWrapper-sc-7hk6zs-2 dCyECp label-wrapper"
        tabindex="-1"
      >
        <div
          class="AccordionStyle__Label-sc-7hk6zs-5 cLFDCN"
        >
          label
        </div>
        <div
          class="AccordionStyle__IconWrapper-sc-7hk6zs-6 fkCeju"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 HVQub"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <path
              d="M100 25L50 75 0 25z"
            />
          </svg>
        </div>
      </div>
      <div
        class="AccordionStyle__ContentWrapper-sc-7hk6zs-3 eGonwa content-wrapper"
      >
        <div
          class="AccordionStyle__Content-sc-7hk6zs-4 cGNPME"
        >
          content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
